<resources>
    <string name="app_name">MyChats</string>
    <string name="login">Login</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="new_to_mychat_signup">New to MyChat? SignUp</string>
    <string name="sign_up">Sign up</string>
    <string name="go_to_login_page">Go to Login page</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="account">My Account</string>
    <string name="my_account_setting">My Account Setting</string>
    <string name="find">Find</string>
    <string name="my_chats">My Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_network">My Network</string>
    <string name="user_profile">User Profile</string>
    <string name="received_friend_request">All Received Friend Requests</string>
    <string name="pending_friend_requests">Pending Friend Requests</string>
    <string name="this_is_demo_message">this is demo message</string>
    <string name="unfriend">UnFriend</string>
    <string name="un_friend">Un-Friend</string>
    <string name="go_for_chat">Go for Chat</string>

</resources>